--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development NODE_PATH=. nodemon --config nodemon.json src/app.ts",
     "start": "cross-env NODE_ENV=development NODE_PATH=. ts-node src/app.ts",
+    "preprod": "knex migrate:latest; knex seed:run",
     "prod": "tsc && cross-env NODE_ENV=production NODE_PATH=. node dist/app.js",
     "db-reset": "knex migrate:rollback; knex migrate:latest; knex seed:run"
   },
