--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 HOST=localhost
 PORT=3001
 
-DB=site-342
+DB=algonlp
 DB_HOST=127.0.0.1
-DB_USER=site-342
-DB_PASSWORD=site-342
+DB_USER=algonlp
+DB_PASSWORD=algonlp
 
 SESSION_SECRET=secret
 REDIS_HOST=localhost
