--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,6 +11,11 @@ jobs:
     runs-on: self-hosted
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
     - name: Installing backend packages
       run: npm i
     - name: Installing frontend packages and building
