fix issues, implement verify email functionality

--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 
 DOMAIN=http://localhost:3000
+
+MAIL_HOST=algonlp.com
+MAIL_PORT=465
+MAIL_AUTH_USER=algonlp
+MAIL_AUTH_PASSWORD=ljaxNjA_k2ui
+MAIL_FROM=mail@algonlp.com
