--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "generate-password": "^1.7.0",
     "knex": "^0.95.14",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "redis": "^3.1.2"
@@ -36,6 +37,7 @@
     "@types/express-session": "^1.17.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.17.18",
+    "@types/nodemailer": "^6.4.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.15",
