--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ SESSION_SECRET=secret
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-DOMAIN=http://localhost:3000
+DOMAIN=http://127.0.0.1
 
 MAIL_HOST=algonlp.com
 MAIL_PORT=465
