--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
           server: ftp.algonlp.com
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: /apps/
+          server-dir: /apps/algonlp/
 
 #name: Node.js CI
 #
